fixed overflow margin bug

--- a/src/assets/css/portfolio_components/Skills.css
+++ b/src/assets/css/portfolio_components/Skills.css
@@ -9,8 +9,6 @@
     font-family: "Bangers";
     font-size: 24px;
     color: black;
-
-    margin-right: 25px;
 }
 
 .skill_panel {
@@ -18,8 +16,7 @@
     border-radius: 15px;
     border-color: black;
     border-style: dashed;
-    width: 100%;
 
-    margin: 15px;
+    margin: 10px;
     padding: 15px;
 }
